# ml-courses

./: .copier-answers.yml  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  myst.yml  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: book.yml
book/: overview.md
book/algemeen/: hello_world.ipynb  references.md  voorbereiding.ipynb
book/algemeen/lecturers/: kevin_diependaele.md
book/general/: preparation.ipynb
book/general/lecturers/: kevin_diependaele.md
book/math_foundations/: afspraken.md  glossary.md  instructions.md  introductie.md  introduction.md  mmap.md
book/math_foundations/labo/: linalg.ipynb  linreg.ipynb  numpy.ipynb  python.ipynb
book/math_foundations/labs/: backprop.ipynb  glm.ipynb  linalg.ipynb  linreg.ipynb  probability-basics.ipynb  probability-bayes.ipynb  probability-joint.ipynb  probability-likelihood.ipynb  probability-moments.ipynb  probability-testing.ipynb  structure-tSNE.ipynb
book/math_foundations/labs/prep/: backprop.ipynb  linalg.ipynb  linreg.ipynb  probability.ipynb
book/math_foundations/les1/: data.ipynb  patronen.ipynb
book/math_foundations/linalg/: basic_ops.ipynb  basis_ops.ipynb  dot_prod.ipynb  inverse.ipynb  linalg.ipynb  lineaire_regressie.ipynb  special_tensors.ipynb  tensors.ipynb  why_tensors.ipynb
book/math_foundations/linalg/lineaire_regressie/: closed.ipynb  gradient.ipynb  gradient_descent.ipynb  grid.ipynb  monte_carlo.ipynb
book/math_foundations/lineair_regression/: grid.ipynb
book/math_foundations/lineaire_regressie/: closed.ipynb  glm.ipynb  gradient.ipynb  gradient_descent.ipynb  grid.ipynb  monte_carlo.ipynb  multiple.ipynb  ols.ipynb
book/math_foundations/linear_regression/: glm.ipynb  gradient.ipynb  gradient_descent.ipynb  grid.ipynb  multiple.ipynb  ols.ipynb
book/math_foundations/nn/: backprop.ipynb  perceptron.ipynb  softmax.ipynb
book/math_foundations/prob/: bayes.ipynb  information.ipynb  likelihood.ipynb  probability.ipynb  testing.ipynb
book/math_foundations/struct/: pca.ipynb  tSNE.ipynb  tsne.ipynb
book/ml_principles/: afspraken.md  glossary.md  hello_world.ipynb  instructions.md  introductie.md  introduction.md  modellen.ipynb
book/ml_principles/basics/: evaluation.ipynb  experience.ipynb  features.ipynb  overview.md  parameters.ipynb  structure.ipynb  tasks.ipynb  training.ipynb
book/ml_principles/basis/: algorithmes.ipynb  algoritmes.ipynb  evaluatie.ipynb  evaluation.ipynb  features.ipynb  feedback.ipynb  inference.ipynb  lifecycle.ipynb  ml.ipynb  mlflow.ipynb  modellen.ipynb  models.ipynb  parameters.ipynb  structure.ipynb  structuur.ipynb  tasks.ipynb  training.ipynb
book/ml_principles/labo/: airbnb.ipynb  taco.ipynb  uber#1.ipynb  uber#2.ipynb  uber.ipynb
book/ml_principles/labs/: exploratory_uber_b.ipynb  imggen_butterfly.ipynb  imgrec_taco_#1.ipynb  imgrec_taco_#2.ipynb  imgrec_taco_explore.ipynb  imgrec_taco_train.ipynb  ingrec_taco_#2.ipynb  nlp_nanogpt.ipynb  rl_basics.ipynb  rl_hugging_face_doom.ipynb  structured_airbnb.ipynb
book/ml_principles/labs/prep/: exploratory.ipynb  fashion_mnist.ipynb  imgrec.ipynb  nlp.ipynb  sentiment_imdb.ipynb  structured.ipynb
book/ml_principles/les1/: inference.ipynb  lifecycle.ipynb  modellen.ipynb  training.ipynb
book/ml_principles/rl/: rl_principles.ipynb
book/ml_principles/series/: nlp.ipynb
book/ml_principles/structured/: automl.ipynb  boosting.ipynb  forests.ipynb  intro.ipynb  trees.ipynb
book/ml_principles/vision/: architectures.ipynb  cnns.ipynb  evaluation.ipynb  imggen.ipynb  imgrec.ipynb  intro.ipynb  intro.md  learning_approaches.ipynb  vision_tasks.ipynb  vit.ipynb
img/: math-foundations-mmap.excalidraw  ml-principles-overview.excalidraw
notebooks/: test.ipynb
src/ml_courses/: __init__.py  utils.py
src/ml_courses/pdf/: __init__.py  __main__.py  converter.py  generator.py
src/ml_courses/sim/: __init__.py  airco.py  cnn_viz.py  derivative_viz.py  linear_regression_sse_viz.py  logistic_data.py  monte_carlo_tips.py
tests/: __init__.py  test_import.py  test_pdf_generator.py
